--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "newrelic": "^7.2.1",
     "request": "^2.88.2"
   }
 }
