edits to nginx server

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 http {
-	proxy_cache_path /tmp/nginx_cache  keys_zone=mycache:10m levels=1:2 inactive=120s max_size=100m use_temp_path=off;
-	# proxy_cache_path /tmp/nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=120m use_temp_path=off;
+	proxy_cache_path /tmp/nginx_cache  keys_zone=mycache:10m levels=1:2 inactive=120m max_size=6g use_temp_path=off;
 	# proxy_cache_key "$scheme$request_method$host$request_uri";
 	# proxy_cache_valid 200 302;
 
@@ -27,12 +26,10 @@ http {
 		}
 
 		location /buildings/ {
-			# proxy_cache my_cache;
-			# add_header X-Cache $upstream_cache_status;
 			proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
 			proxy_cache mycache;
 			proxy_cache_valid any 48h;
-			proxy_cache_methods GET HEAD POST;
+			proxy_cache_methods GET HEAD POST PUT;
 			proxy_cache_min_uses 1;
 			proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
 			add_header X-Proxy-Cache $upstream_cache_status;
