--- a/nginx.conf
+++ b/nginx.conf
@@ -5,12 +5,12 @@ http {
 
 	include /etc/nginx/mime.types;
 
-	upstream proxy {
-		server collin_proxy:6002;
-	}
-
 	upstream nearby {
-		server nearby_service:5001;
+		server 172.31.20.117:5001;
+		# server new_ip:5001;
+		# server new_ip:5001;
+		# server new_ip:5001;
+
 	}
 
 
@@ -29,7 +29,7 @@ http {
 			proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
 			proxy_cache mycache;
 			proxy_cache_valid any 48h;
-			proxy_cache_methods GET HEAD POST PUT;
+			proxy_cache_methods GET HEAD;
 			proxy_cache_min_uses 1;
 			proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
 			add_header X-Proxy-Cache $upstream_cache_status;
