--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "> This proxy loads all services on a single page.",
   "main": "index.js",
   "scripts": {
-    "server": "node server/index.js",
-    "server:dev": "nodemon server/index.js"
+    "start": "webpack && node server/server.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +12,15 @@
   },
   "author": "Joshua Bradley",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
+  },
   "bugs": {
     "url": "https://github.com/space-work/workspace-description-service-proxy/issues"
   },
@@ -21,12 +29,29 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/node": "^7.13.13",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.13.10",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "*",
+    "compression-webpack-plugin": "^7.1.2",
     "cors": "^2.8.5",
+    "css-loader": "^5.2.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "newrelic": "^7.2.1",
-    "request": "^2.88.2"
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^2.5.2",
+    "webpack-s3-plugin": "*"
   }
 }
