broke out bundle builds

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,9 @@ http {
 
 	upstream nearby {
 		server 172.31.20.117:5001;
-		# server new_ip:5001;
-		# server new_ip:5001;
-		# server new_ip:5001;
+		server new_ip:5001;
+		server new_ip:5001;
+		server new_ip:5001;
 
 	}
 
