--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "> This proxy loads all services on a single page.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack && node server/server.bundle.js"
+    "ssr": "webpack --config webpack.server.js && node server/server.bundle.js",
+    "build": "webpack --config webpack.browser.js"
   },
   "repository": {
     "type": "git",
