--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,13 @@
 http {
 	proxy_cache_path /tmp/nginx_cache  keys_zone=mycache:10m levels=1:2 inactive=120m max_size=6g use_temp_path=off;
-	# proxy_cache_key "$scheme$request_method$host$request_uri";
-	# proxy_cache_valid 200 302;
-
+	log_format custom_format '$remote_addr - $remote_user [$time_local]"$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" rt=$request_time rt="$upstream_response_time"';
 	include /etc/nginx/mime.types;
 
 	upstream nearby {
 		server 172.31.20.117:5001;
-		server new_ip:5001;
-		server new_ip:5001;
-		server new_ip:5001;
+		# server 172.31.39.138:5001;
+		# server 172.31.9.38:5001;
+		# server 172.31.14.93:5001;
 
 	}
 
@@ -19,10 +17,18 @@ http {
 		root /var/www/static;
 		gzip on;
 		gzip_types text/plain text/css application/javascript;
+		access_log  /var/log/nginx/access.log  custom_format;
+    error_log  /var/log/nginx/error.log warn;
 		underscores_in_headers on;
 
 		location / {
 			try_files $uri $uri/;
+		}
+
+		location /nginx_status {
+			stub_status;
+		#  allow 127.0.0.1;
+		#  deny all;
 		}
 
 		location /buildings/ {
@@ -34,7 +40,8 @@ http {
 			proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
 			add_header X-Proxy-Cache $upstream_cache_status;
 
-			proxy_pass http://nearby;
+			# proxy_pass http://ssr;
+			try_files $uri $uri/;
 		}
 
 		location /api/nearbyworkspaces {
