updated nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,56 +1,50 @@
 http {
-	proxy_cache_path /tmp/nginx_cache  keys_zone=mycache:10m levels=1:2 inactive=120m max_size=6g use_temp_path=off;
-	log_format custom_format '$remote_addr - $remote_user [$time_local]"$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" rt=$request_time rt="$upstream_response_time"';
-	include /etc/nginx/mime.types;
+        proxy_cache_path /tmp/nginx_cache  keys_zone=mycache:200m levels=1:2 inactive=120m use_temp_path=off;
+        log_format custom_format '$remote_addr - $remote_user [$time_local]"$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" rt=$request_time rt="$upstream_response_time"';
+        include /etc/nginx/mime.types;
 
-	upstream nearby {
-		server 172.31.20.117:5001;
-		# server 172.31.39.138:5001;
-		# server 172.31.9.38:5001;
-		# server 172.31.14.93:5001;
+        upstream nearby {
+                server 172.31.20.117:5001;
+        }
 
-	}
+        upstream no_redis {
+                server 172.31.47.89:5001;
+                server 172.31.27.38:5001;
+                server 172.31.32.24:5001;
+                server 172.31.3.39:5001;
+        }
+
+        upstream ssr {
+                server 172.31.44.133:6002;
+                server 172.31.11.92:6002;
+                server 172.31.26.254:6002;
+                server 172.31.30.227:6002;
+        }
 
 
-	server {
-		listen	80;
-		root /var/www/static;
-		gzip on;
-		gzip_types text/plain text/css application/javascript;
-		access_log  /var/log/nginx/access.log  custom_format;
-    error_log  /var/log/nginx/error.log warn;
-		underscores_in_headers on;
+        server {
+                listen 80;
+                root /var/www/static;
+                index index.html;
+                gzip on;
+                gzip_types text/plain text/css application/javascript;
+                access_log  /var/log/nginx/access.log  custom_format;
+                error_log  /var/log/nginx/error.log warn;
+                underscores_in_headers on;
+                location /loaderio-64fb6fd7e551aa5d9489f2cd0371c2c0.html {
+                        index loaderio-64fb6fd7e551aa5d9489f2cd0371c2c0.html;
+                }
+                location /nginx_status {
+                        stub_status;
+                }
 
-		location / {
-			try_files $uri $uri/;
-		}
+                include includes/ssr;
+                #include includes/client;
 
-		location /nginx_status {
-			stub_status;
-		#  allow 127.0.0.1;
-		#  deny all;
-		}
-
-		location /buildings/ {
-			proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
-			proxy_cache mycache;
-			proxy_cache_valid any 48h;
-			proxy_cache_methods GET HEAD;
-			proxy_cache_min_uses 1;
-			proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
-			add_header X-Proxy-Cache $upstream_cache_status;
-
-			# proxy_pass http://ssr;
-			try_files $uri $uri/;
-		}
-
-		location /api/nearbyworkspaces {
-			proxy_pass	http://nearby;
-		}
-		location ~* \.(js|css)$ {
-			expires	30d;
-		}
-	}
+								location ~* \.(js|css)$ {
+												expires 30d;
+                }
+        }
 }
 
 events { }
